--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,1 +1,17 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title>Good Thymes Virtual Grocery</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link th:href="@{../style.css}" rel="stylesheet">
+</head>
+
+<body>
+<div class="timerBox">
+    <p>This is a sample box that will contain the timer.</p>
+</div>
+</body>
+
+</html>
