CSS added to timer.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,12 +6,18 @@
     <title>Trajan</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link th:href="@{../css/style.css}" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<div class="timerBox">
-    <h1 id="timer"></h1>
+<div class="card">
+    <div class="timerBox">
+        <h1 id="timer"></h1>
+    </div>
 </div>
 <script type="text/javascript" th:src="@{../js/timer.js}"></script>
 </body>
