--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,16 @@
+.card {
+    display: flex;
+    justify-content: center;
+}
+
 .timerBox {
     border: solid 1px grey;
     border-radius: 10px;
+    width: 130px;
+    padding: 10px;
+    text-align: center;
 }
 h1 {
     font-size: 42px;
+    font-family: 'Noto Sans', sans-serif;
 }
