--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,16 +18,16 @@
     <div class="list-container" id="task-list">
         <h1 class="list-header">To-Do List</h1>
         <div class="add-task">
-            <input type="text" autocomplete="off" placeholder="Add New Task" v-model="task.name" @keyup.enter="newItem" class="task-input">
-            <input type="submit" value="" class="submit-task" @click="newItem" title="Add Task">
+            <input type="text" autocomplete="off" placeholder="Add New Task" class="task-input">
+            <input type="submit" value="" class="submit-task" title="Add Task">
         </div>
         <ul class="task-list">
             <li class="task-list-item">
                 <label class="task-list-item-label">
-                    <input type="checkbox">
-                    <span>{{task.name}}</span>
+                    <input type="checkbox" class="task-input-field">
+                    <span></span>
                 </label>
-                <span @click="delItem(task)" class="delete-btn" title="Delete Task">{{task.del}}</span>
+                <span class="delete-btn" title="Delete Task"></span>
             </li>
         </ul>
     </div>
