--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -257,7 +257,7 @@ ul {
   border: 1px solid var(--checkbox-color);
   background-color: var(--checkbox-color);
 }
-.task-list-item input:checked + span {
+.task-input-field:checked + span {
   color: rgba(255, 255, 255, 0.5);
   -webkit-text-decoration: line-through rgba(255, 255, 255, 0.8);
           text-decoration: line-through rgba(255, 255, 255, 0.8);
@@ -272,6 +272,10 @@ ul {
   position: relative;
   transition: 0.2s;
   cursor: pointer;
+}
+
+.task-text {
+    font-family: 'Noto Sans', sans-serif;
 }
 
 .delete-btn {
