--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,7 +39,7 @@ h1 {
   grid-column: 2/3;
   grid-row: 4/6;
   width: 9rem;
-  height: 100%;
+  height: 200px;
   justify-self: center;
   border-radius: 1rem;
   display: grid;
