--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
         <div class="timerBox">
             <h1 id="timer"></h1>
             <div class="timer-input-container">
-                <input type="text" id="timer-length" disabled>
+                <input type="text" id="timer-length" disabled value="30">
                 <div>
                     <button type="button" class="increment-timer">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
