--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,22 +25,22 @@
         </ul>
     </div>
     <div class="card">
-        <div class="timerBox">
+        <div class="timer-box">
             <h1 id="timer"></h1>
-            <div class="timer-input-container">
-                <input type="text" id="timer-length" disabled value="30">
-                <div>
-                    <button type="button" class="increment-timer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
-                        </svg>
-                    </button>
-                    <button type="button" class="decrement-timer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
-                        </svg>
-                    </button>
-                </div>
+        </div>
+        <div class="timer-input-container">
+            <input type="text" id="timer-length" disabled value="30">
+            <div class="timer-input-buttons">
+                <button type="button" class="increment-timer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
+                    </svg>
+                </button>
+                <button type="button" class="decrement-timer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
+                    </svg>
+                </button>
             </div>
         </div>
         <div class="circle">
