--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,10 +25,10 @@
         </ul>
     </div>
     <div class="card">
-        <div class="timer-box">
+        <div class="timer-box" id="timer-box">
             <h1 id="timer"></h1>
         </div>
-        <div class="timer-input-container">
+        <div class="timer-input-container" id="timer-input-container">
             <input type="text" id="timer-length" disabled value="30">
             <div class="timer-input-buttons">
                 <button type="button" class="increment-timer">
@@ -45,8 +45,8 @@
         </div>
         <div class="circle">
             <span class="circle__btn">
-                <svg xmlns="http://www.w3.org/2000/svg" class="pause" id="pause" viewBox="0 0 512 512" width="48"><path d="M208 432h-48a16 16 0 01-16-16V96a16 16 0 0116-16h48a16 16 0 0116 16v320a16 16 0 01-16 16zM352 432h-48a16 16 0 01-16-16V96a16 16 0 0116-16h48a16 16 0 0116 16v320a16 16 0 01-16 16z"/></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" class="play" id="play" viewBox="0 0 512 512" width="48"><path d="M133 440a35.37 35.37 0 01-17.5-4.67c-12-6.8-19.46-20-19.46-34.33V111c0-14.37 7.46-27.53 19.46-34.33a35.13 35.13 0 0135.77.45l247.85 148.36a36 36 0 010 61l-247.89 148.4A35.5 35.5 0 01133 440z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="play" id="play" viewBox="0 0 512 512" width="48"><path d="M208 432h-48a16 16 0 01-16-16V96a16 16 0 0116-16h48a16 16 0 0116 16v320a16 16 0 01-16 16zM352 432h-48a16 16 0 01-16-16V96a16 16 0 0116-16h48a16 16 0 0116 16v320a16 16 0 01-16 16z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="pause" id="pause" viewBox="0 0 512 512" width="48"><path d="M133 440a35.37 35.37 0 01-17.5-4.67c-12-6.8-19.46-20-19.46-34.33V111c0-14.37 7.46-27.53 19.46-34.33a35.13 35.13 0 0135.77.45l247.85 148.36a36 36 0 010 61l-247.89 148.4A35.5 35.5 0 01133 440z"/></svg>
             </span>
             <span class="circle__back-1"></span>
             <span class="circle__back-2"></span>
