--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,7 +101,8 @@ h1 {
   -webkit-animation: waves 4s linear infinite;
           animation: waves 4s linear infinite;
 }
-.circle__back-1.paused {
+
+.circle__back-1.running {
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
 }
@@ -110,7 +111,7 @@ h1 {
   -webkit-animation: waves 4s linear 2s infinite;
           animation: waves 4s linear 2s infinite;
 }
-.circle__back-2.paused {
+.circle__back-2.running {
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
 }
@@ -141,13 +142,6 @@ h1 {
     transform: scale(2);
     opacity: 0;
   }
-}
-.dribbble {
-  position: fixed;
-  font-size: 2.6rem;
-  right: 2rem;
-  bottom: 1rem;
-  color: #EA4C89;
 }
 
 /* To-Do List */
