--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,6 +16,12 @@ body {
 }
 
 .main-container {
+    padding: 20px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.task-and-timer-flex {
     display: flex;
     justify-content: space-around;
     background: var(--greyLight-1);
