--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,6 +21,10 @@ body {
     margin: auto;
 }
 
+.streak-container {
+    margin-left: 64px;
+}
+
 .task-and-timer-flex {
     display: flex;
     justify-content: space-around;
@@ -39,115 +43,6 @@ body {
 h1 {
     font-size: 42px;
     font-family: 'Noto Sans', sans-serif;
-}
-
-/* Play-Pause Button */
-.circle {
-  grid-column: 2/3;
-  grid-row: 4/6;
-  width: 9rem;
-  height: 200px;
-  justify-self: center;
-  border-radius: 1rem;
-  display: grid;
-  grid-template-rows: 1fr;
-  justify-items: center;
-  align-items: center;
-}
-.circle__btn {
-  grid-row: 1/2;
-  grid-column: 1/2;
-  width: 6rem;
-  height: 6rem;
-  display: flex;
-  margin: 0.6rem;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  font-size: 3.2rem;
-  color: var(--primary);
-  z-index: 300;
-  background: var(--greyLight-1);
-  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
-  cursor: pointer;
-  position: relative;
-}
-.circle__btn.shadow {
-  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
-}
-.circle__btn .play {
-  color: black;
-  position: absolute;
-  opacity: 0;
-  transition: all 0.2s linear;
-}
-.circle__btn .play.visibility {
-  opacity: 1;
-}
-.circle__btn .pause {
-  color: black;
-  position: absolute;
-  transition: all 0.2s linear;
-}
-.circle__btn .pause.visibility {
-  opacity: 0;
-}
-.circle__back-1, .circle__back-2 {
-  grid-row: 1/2;
-  grid-column: 1/2;
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  filter: blur(1px);
-  z-index: 100;
-}
-.circle__back-1 {
-  box-shadow: 0.4rem 0.4rem 0.8rem var(--greyLight-2), -0.4rem -0.4rem 0.8rem var(--white);
-  background: linear-gradient(to bottom right, var(--greyLight-2) 0%, var(--white) 100%);
-  -webkit-animation: waves 4s linear infinite;
-          animation: waves 4s linear infinite;
-}
-
-.circle__back-1.running {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-}
-.circle__back-2 {
-  box-shadow: 0.4rem 0.4rem 0.8rem var(--greyLight-2), -0.4rem -0.4rem 0.8rem var(--white);
-  -webkit-animation: waves 4s linear 2s infinite;
-          animation: waves 4s linear 2s infinite;
-}
-.circle__back-2.running {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-}
-
-@-webkit-keyframes waves {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes waves {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
 }
 
 /* To-Do List */
