--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,42 +17,40 @@
 <div class="main-container">
     <div class="task-and-timer-flex">
         <div class="list-container" id="task-list">
-        <h1 class="list-header">To-Do List</h1>
-        <div class="add-task">
-            <input type="text" autocomplete="off" placeholder="Add New Task" class="task-input">
-            <input type="submit" value="" class="submit-task" title="Add Task">
-        </div>
-        <ul class="task-list">
-        </ul>
-    </div>
-        <div class="card">
-        <div class="timer-box" id="timer-box">
-            <h1 id="timer"></h1>
-        </div>
-        <div class="timer-input-container" id="timer-input-container">
-            <input type="text" id="timer-length" disabled value="30">
-            <div class="timer-input-buttons">
-                <button type="button" class="increment-timer">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
-                    </svg>
-                </button>
-                <button type="button" class="decrement-timer">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
-                    </svg>
-                </button>
+            <h1 class="list-header">To-Do List</h1>
+            <div class="add-task">
+                <input type="text" autocomplete="off" placeholder="Add New Task" class="task-input">
+                <input type="submit" value="" class="submit-task" title="Add Task">
             </div>
+            <ul class="task-list">
+            </ul>
         </div>
-            <span class="circle__btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-stop-fill play" id="play" viewBox="0 0 16 16">
-                  <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-play-fill pause" id="pause" viewBox="0 0 16 16">
-                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
-                </svg>
-            </span>
-    </div>
+        <div class="timer-card">
+            <div class="timer-box" id="timer-box">
+                <h1 id="timer"></h1>
+            </div>
+            <div class="timer-input-container" id="timer-input-container">
+                <input type="text" id="timer-length" disabled value="30">
+                <div class="timer-input-buttons">
+                    <button type="button" class="increment-timer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
+                        </svg>
+                    </button>
+                    <button type="button" class="decrement-timer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-stop-fill play" id="play" viewBox="0 0 16 16">
+              <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-play-fill pause" id="pause" viewBox="0 0 16 16">
+              <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+            </svg>
+        </div>
     </div>
     <div class="streak-container">
         <h1>This is the streak container.</h1>
