--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .timer-box {
-    visibility: hidden;
+    /* visibility: hidden; */
     border: solid 1px grey;
     border-radius: 10px;
     width: 130px;
@@ -59,6 +59,7 @@ body {
 h1 {
     font-size: 42px;
     font-family: 'Noto Sans', sans-serif;
+    color: #fff;
 }
 
 /* To-Do List */
