--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
         </div>
         <div class="timer-card">
             <div class="timer-box" id="timer-box">
-                <h1 id="timer"></h1>
+                <h1 class="timer" id="timer"></h1>
             </div>
             <div class="timer-input-container" id="timer-input-container">
                 <input type="text" id="timer-length" disabled value="30">
@@ -45,10 +45,10 @@
                 </div>
             </div>
             <span class="circle__btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-stop-fill play" id="play" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#fff" class="bi bi-stop-fill pause" id="pause" viewBox="0 0 16 16">
                   <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"/>
                 </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-play-fill pause" id="pause" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#fff" class="bi bi-play-fill play" id="play" viewBox="0 0 16 16">
                   <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
                 </svg>
             </span>
